--- a/data/song.yml
+++ b/data/song.yml
@@ -43,7 +43,7 @@ score:
           patterns: [[64, 0, 1, 1, 1, 1, 69, 0, 1, 1], [1, 1, 1, 1, 1, 1, 1, 1, 62, 0, 1, 1, 1, 1], [64, 0]]
         - numvoices: 1
           order: [8, -1, -1, -1, -1, -1, -1, -1, 0, -1, 0, 1, 0, -1, 0, 2, 0, -1, 0, 1, 0, -1, 3, 7, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 0, -1, 0, -1, 0, -1, 0]
-          patterns: [[64, 1, 67, 1, 69, 1, 1, 1, 1, 1, 1, 1, 1], [69, 1, 1, 1, 69, 1, 69, 1, 1, 1, 71, 1, 67, 1, 1], [69, 1, 1, 1, 69, 1, 69, 1, 1, 1, 69, 1, 76, 1, 1], [69, 0, 1, 67, 0, 1, 64, 0, 67, 0, 1, 64, 0, 1, 62, 0], [107], [90], [90, 0], [64], [64]]
+          patterns: [[64, 0, 1, 67, 0, 1, 1, 1, 69, 0, 1, 1, 1], [69, 0, 1, 1, 69, 0, 69, 0, 1, 1, 71, 0, 67, 0, 1], [69, 0, 1, 1, 69, 0, 69, 0, 1, 1, 69, 0, 76, 0, 1], [69, 0, 1, 67, 0, 1, 64, 0, 67, 0, 1, 64, 0, 1, 62, 0], [107], [90], [90, 0], [64, 0], [64, 0]]
     rowsperpattern: 16
     length: 94
 patch:
@@ -113,7 +113,7 @@ patch:
           parameters: {attack: 48, decay: 64, gain: 112, release: 64, stereo: 0, sustain: 0}
         - type: oscillator
           id: 19
-          parameters: {color: 0, detune: 64, gain: 128, looplength: 1486, loopstart: 2536, phase: 0, samplestart: 250849, shape: 64, stereo: 0, transpose: 42, type: 1, unison: 0}
+          parameters: {color: 128, detune: 64, gain: 128, looplength: 1486, loopstart: 2536, phase: 64, samplestart: 250849, shape: 64, stereo: 0, transpose: 42, type: 1, unison: 0}
         - type: mulp
           id: 20
           parameters: {stereo: 0}
@@ -134,16 +134,16 @@ patch:
           parameters: {attack: 0, decay: 64, gain: 128, release: 0, stereo: 0, sustain: 0}
         - type: distort
           id: 25
-          parameters: {drive: 32, stereo: 0}
+          parameters: {drive: 28, stereo: 0}
         - type: send
           id: 26
-          parameters: {amount: 77, port: 0, sendpop: 1, stereo: 0, target: 2}
+          parameters: {amount: 80, port: 0, sendpop: 1, stereo: 0, target: 2}
     - name: Kick
       numvoices: 1
       units:
         - type: envelope
           id: 154
-          parameters: {attack: 16, decay: 32, gain: 32, release: 0, stereo: 0, sustain: 0}
+          parameters: {attack: 16, decay: 36, gain: 32, release: 0, stereo: 0, sustain: 0}
         - type: oscillator
           id: 155
           parameters: {color: 17, detune: 64, gain: 64, looplength: 2614, loopstart: 2301, phase: 0, samplestart: 171746, shape: 64, stereo: 0, transpose: 82, type: 4}
@@ -161,7 +161,7 @@ patch:
           parameters: {drive: 96, stereo: 0}
         - type: send
           id: 1140
-          parameters: {amount: 0, port: 4, sendpop: 0, stereo: 0, target: 18, unit: 0, voice: 0}
+          parameters: {amount: 16, port: 4, sendpop: 0, stereo: 0, target: 18, unit: 0, voice: 0}
         - type: oscillator
           id: 3
           parameters: {color: 128, detune: 64, gain: 128, looplength: 1, phase: 64, shape: 68, stereo: 0, transpose: 42, type: 0}
@@ -194,7 +194,7 @@ patch:
           parameters: {attack: 48, decay: 54, gain: 128, release: 0, stereo: 0, sustain: 0}
         - type: send
           id: 1139
-          parameters: {amount: 32, port: 5, sendpop: 1, stereo: 0, target: 3, unit: 0, voice: 0}
+          parameters: {amount: 24, port: 5, sendpop: 1, stereo: 0, target: 3, unit: 0, voice: 0}
     - name: Snare
       numvoices: 1
       units:
@@ -272,22 +272,22 @@ patch:
           parameters: {panning: 70, stereo: 0}
         - type: outaux
           id: 67
-          parameters: {auxgain: 0, outgain: 24, stereo: 1}
+          parameters: {auxgain: 0, outgain: 32, stereo: 1}
     - name: Supersaw
       numvoices: 1
       units:
         - type: oscillator
           id: 68
-          parameters: {color: 2, detune: 40, gain: 16, lfo: 0, phase: 0, shape: 63, stereo: 1, transpose: 66, type: 1, unison: 3}
+          parameters: {color: 2, detune: 48, gain: 16, lfo: 0, phase: 0, shape: 63, stereo: 1, transpose: 66, type: 1, unison: 3}
         - type: oscillator
           id: 158
-          parameters: {color: 2, detune: 50, gain: 16, phase: 0, shape: 64, stereo: 1, transpose: 66, type: 1, unison: 3}
+          parameters: {color: 2, detune: 78, gain: 16, phase: 0, shape: 64, stereo: 1, transpose: 66, type: 1, unison: 3}
         - type: addp
           id: 159
           parameters: {stereo: 1}
         - type: oscillator
           id: 160
-          parameters: {color: 2, detune: 72, gain: 16, phase: 0, shape: 64, stereo: 1, transpose: 66, type: 1, unison: 3}
+          parameters: {color: 2, detune: 59, gain: 16, phase: 0, shape: 64, stereo: 1, transpose: 66, type: 1, unison: 3}
         - type: addp
           id: 161
           parameters: {stereo: 1}
@@ -302,7 +302,7 @@ patch:
           parameters: {stereo: 1}
         - type: envelope
           id: 72
-          parameters: {attack: 48, decay: 64, gain: 64, release: 64, stereo: 1, sustain: 64}
+          parameters: {attack: 48, decay: 64, gain: 72, release: 64, stereo: 1, sustain: 64}
         - type: mulp
           id: 73
           parameters: {stereo: 1}
@@ -471,23 +471,23 @@ patch:
       units:
         - type: envelope
           id: 183
-          parameters: {attack: 64, decay: 64, gain: 56, release: 64, stereo: 0, sustain: 64}
+          parameters: {attack: 64, decay: 64, gain: 72, release: 64, stereo: 0, sustain: 64}
         - type: oscillator
           id: 184
-          parameters: {color: 128, detune: 64, gain: 128, looplength: 67, loopstart: 1007, phase: 0, samplestart: 806305, shape: 112, stereo: 0, transpose: 90, type: 0}
+          parameters: {color: 128, detune: 64, gain: 128, looplength: 67, loopstart: 1007, phase: 0, samplestart: 806305, shape: 64, stereo: 0, transpose: 90, type: 0}
         - type: mulp
           id: 185
           parameters: {stereo: 0}
         - type: delay
           id: 186
-          parameters: {damp: 64, dry: 128, feedback: 96, notetracking: 0, pregain: 40, stereo: 0}
-          varargs: [8507]
+          parameters: {damp: 32, dry: 128, feedback: 96, notetracking: 0, pregain: 40, stereo: 0}
+          varargs: [9187]
         - type: filter
           id: 28
-          parameters: {bandpass: 0, frequency: 40, highpass: 0, lowpass: 1, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
+          parameters: {bandpass: 0, frequency: 64, highpass: 1, lowpass: 0, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
         - type: pan
           id: 187
-          parameters: {panning: 64, stereo: 0}
+          parameters: {panning: 58, stereo: 0}
         - type: outaux
           id: 188
           parameters: {auxgain: 64, outgain: 64, stereo: 1}
@@ -505,7 +505,7 @@ patch:
       units:
         - type: envelope
           id: 29
-          parameters: {attack: 48, decay: 48, gain: 32, release: 0, stereo: 0, sustain: 0}
+          parameters: {attack: 48, decay: 48, gain: 48, release: 0, stereo: 0, sustain: 0}
         - type: sync
           id: 1104
           parameters: {}
@@ -524,7 +524,7 @@ patch:
           parameters: {bandpass: 1, frequency: 64, highpass: 1, lowpass: 0, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
         - type: pan
           id: 33
-          parameters: {panning: 72, stereo: 0}
+          parameters: {panning: 70, stereo: 0}
         - type: outaux
           id: 34
           parameters: {auxgain: 128, outgain: 0, stereo: 1}
@@ -579,7 +579,7 @@ patch:
           parameters: {stereo: 1}
         - type: compressor
           id: 95
-          parameters: {attack: 48, invgain: 96, ratio: 96, release: 96, stereo: 1, threshold: 114}
+          parameters: {attack: 16, invgain: 90, ratio: 96, release: 96, stereo: 1, threshold: 114}
         - type: mulp
           id: 96
           parameters: {stereo: 1}
