--- a/data/song.yml
+++ b/data/song.yml
@@ -98,10 +98,13 @@ patch:
       units:
         - type: envelope
           id: 18
-          parameters: {attack: 48, decay: 64, gain: 112, release: 64, stereo: 0, sustain: 0}
+          parameters: {attack: 48, decay: 64, gain: 128, release: 64, stereo: 0, sustain: 0}
+        - type: distort
+          id: 1156
+          parameters: {drive: 112, stereo: 0}
         - type: oscillator
           id: 19
-          parameters: {color: 128, detune: 64, gain: 128, looplength: 1486, loopstart: 2536, phase: 64, samplestart: 250849, shape: 64, stereo: 0, transpose: 42, type: 1, unison: 0}
+          parameters: {color: 0, detune: 64, gain: 128, looplength: 1486, loopstart: 2536, phase: 64, samplestart: 250849, shape: 64, stereo: 0, transpose: 42, type: 1, unison: 0}
         - type: mulp
           id: 20
           parameters: {stereo: 0}
@@ -116,7 +119,7 @@ patch:
           parameters: {stereo: 0}
         - type: outaux
           id: 23
-          parameters: {auxgain: 0, outgain: 128, stereo: 1}
+          parameters: {auxgain: 0, outgain: 64, stereo: 1}
         - type: envelope
           id: 24
           parameters: {attack: 0, decay: 64, gain: 128, release: 0, stereo: 0, sustain: 0}
@@ -285,7 +288,7 @@ patch:
           parameters: {bandpass: 0, frequency: 32, highpass: 1, lowpass: 0, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 1}
         - type: delay
           id: 74
-          parameters: {damp: 64, dry: 128, feedback: 64, notetracking: 0, pregain: 64, stereo: 1}
+          parameters: {damp: 64, dry: 64, feedback: 64, notetracking: 0, pregain: 64, stereo: 1}
           varargs: [9187, 9187]
         - type: outaux
           id: 78
@@ -429,7 +432,7 @@ patch:
           parameters: {color: 64, detune: 64, gain: 128, looplength: 2261, loopstart: 1236, phase: 0, samplestart: 540923, shape: 64, stereo: 0, transpose: 43, type: 4}
         - type: filter
           id: 179
-          parameters: {bandpass: 0, frequency: 18, highpass: 0, lowpass: 1, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
+          parameters: {bandpass: 0, frequency: 20, highpass: 0, lowpass: 1, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
         - type: mulp
           id: 180
           parameters: {stereo: 0}
@@ -443,6 +446,12 @@ patch:
         - type: outaux
           id: 182
           parameters: {auxgain: 64, outgain: 0, stereo: 1}
+        - type: oscillator
+          id: 1157
+          parameters: {color: 128, detune: 64, gain: 64, lfo: 1, phase: 0, shape: 64, stereo: 0, transpose: 33, type: 0}
+        - type: send
+          id: 1158
+          parameters: {amount: 66, port: 0, sendpop: 1, stereo: 0, target: 179, unit: 0, voice: 0}
     - name: Blip
       numvoices: 1
       units:
@@ -568,7 +577,7 @@ patch:
           parameters: {stereo: 1}
         - type: compressor
           id: 1129
-          parameters: {attack: 16, invgain: 128, ratio: 48, release: 48, stereo: 1, threshold: 128}
+          parameters: {attack: 20, invgain: 110, ratio: 114, release: 20, stereo: 1, threshold: 128}
         - type: mulp
           id: 96
           parameters: {stereo: 1}
