--- a/data/song.yml
+++ b/data/song.yml
@@ -134,10 +134,10 @@ patch:
           parameters: {}
         - type: distort
           id: 163
-          parameters: {drive: 120, stereo: 0}
+          parameters: {drive: 112, stereo: 0}
         - type: send
           id: 1140
-          parameters: {amount: 32, port: 4, sendpop: 0, stereo: 0, target: 18, unit: 0, voice: 0}
+          parameters: {amount: 32, port: 5, sendpop: 0, stereo: 0, target: 19, unit: 0, voice: 0}
         - type: oscillator
           id: 3
           parameters: {color: 128, detune: 64, gain: 128, looplength: 1, phase: 0, shape: 64, stereo: 0, transpose: 42, type: 0}
@@ -147,6 +147,19 @@ patch:
         - type: filter
           id: 32
           parameters: {bandpass: 0, frequency: 14, highpass: 1, lowpass: 0, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
+        - type: push
+          id: 1159
+          parameters: {stereo: 0}
+        - type: filter
+          id: 1160
+          parameters: {bandpass: 0, frequency: 16, highpass: 0, lowpass: 1, negbandpass: 0, neghighpass: 0, resonance: 128, stereo: 0}
+        - type: delay
+          id: 1161
+          parameters: {count: 8, damp: 64, delay: 1, dry: 0, feedback: 96, notetracking: 0, pregain: 32, stereo: 0}
+          varargs: [1116, 1188, 1276, 1356, 1422, 1492, 1556, 1618]
+        - type: addp
+          id: 1162
+          parameters: {stereo: 0}
         - type: pan
           id: 36
           parameters: {panning: 64, stereo: 0}
@@ -164,13 +177,13 @@ patch:
           parameters: {amount: 101, port: 0, sendpop: 1, stereo: 0, target: 3}
         - type: envelope
           id: 1138
-          parameters: {attack: 47, decay: 57, gain: 128, release: 0, stereo: 0, sustain: 0}
+          parameters: {attack: 48, decay: 58, gain: 128, release: 0, stereo: 0, sustain: 0}
         - type: distort
           id: 1142
-          parameters: {drive: 120, stereo: 0}
+          parameters: {drive: 64, stereo: 0}
         - type: send
           id: 1139
-          parameters: {amount: 12, port: 5, sendpop: 1, stereo: 0, target: 3, unit: 0, voice: 0}
+          parameters: {amount: 32, port: 5, sendpop: 1, stereo: 0, target: 3, unit: 0, voice: 0}
     - name: Snare
       numvoices: 1
       units:
